- Upgrade min version of uncertainties to 3.1.4
- Fix setting options of the application registry (Issue #1403).
- Fix Quantity & Unit `is_compatible_with` with registry active contexts (Issue #1424).
- Allow Quantity to parse 'NaN' and 'inf(inity)', case insensitive
- Fix casting error when using to_reduced_units with array of int.
  (Issue #1184)


0.18 (2021-10-26)
-----------------

### Release Manager: jules-cheron

- Implement use of Quantity in the Quantity constructor (convert to specified units).
  (Issue #1231)
- Rename .readthedocs.yml to .readthedocs.yaml, update MANIFEST.in (Issue #1311)
- Fix a few small typos.
  (Issue #1308)
- Fix babel format for `Unit`.
  (Issue #1085)
- Fix handling of positional max/min arguments in clip function.
  (Issue #1244)
- Fix string formatting of numpy array scalars.
- Fix default format for Measurement class (Issue #1300)
- Fix parsing of pretty units with same exponents but different sign. (Issue #1360)
- Convert the application registry to a wrapper object (Issue #1365)
- Add documentation for the string format options.
   (Issue #1357, #1375, thanks keewis)
- Support custom units formats.
  (Issue #1371, thanks keewis)
- Autoupdate pre-commit hooks.
- Improved the application registry.
  (Issue #1366, thanks keewis)
- Improved testing isolation using pytest fixtures.

### Breaking Changes

- pint no longer supports Python 3.6
- Minimum Numpy version supported is 1.17+
- Add supports for type hints for Quantity class. Quantity is now a Generic (PEP560).
- Add support for [PEP561](https://www.python.org/dev/peps/pep-0561/) (Package Type information)


0.17 (2021-03-22)
-----------------

- Add the Wh unit for battery capacity measurements
  (PR #1260, thanks Maciej Grela)
- Fix issue with reducable dimensionless units when using power (Quantity**ndarray)
  (Issue #1185)
- Fix comparisons between Quantities and Measurements.
  (Issue #1134, thanks lewisamarshall)